--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
   
          <div class="products"> 
          <div class="product"> 
-            <img src="downloads\pair-trainers.jpg" width="100" height="100"></img>
+            <img src="images\pair-trainers.jpg" width="100" height="100"></img>
              <h2>Product 1</h2> 
              <p>Price: $10</p> 
              <button class="add-to-cart" onclick="addToCart('Product 1', 10)">Add to Cart</button> 
          </div> 
   
          <div class="product"> 
+             <img src="images\pink-trainers.jpg" width="100" height="100"></img
              <h2>Product 2</h2> 
              <p>Price: $20</p> 
              <button class="add-to-cart" onclick="addToCart('Product 2', 20)">Add to Cart</button> 
