--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
          <div class="products"> 
          <div class="product"> 
             <img src="images\pair-trainers.jpg" width="100" height="100"></img>
-             <h2>Product 1</h2> 
-             <p>Price: $10</p> 
+             <h2>SHOES</h2> 
+             <p>Price: $100</p> 
              <button class="add-to-cart" onclick="addToCart('Product 1', 10)">Add to Cart</button> 
          </div> 
   
          <div class="product"> 
              <img src="images\pink-trainers.jpg" width="100" height="100"></img
-             <h2>Product 2</h2> 
-             <p>Price: $20</p> 
+             <h2>HANDBAGS</h2> 
+             <p>Price: $200</p> 
              <button class="add-to-cart" onclick="addToCart('Product 2', 20)">Add to Cart</button> 
          </div> 
              </div> 
   
          <div class="cart"> 
-             <h2>Shopping Cart</h2> 
+             <h2>Shopping  cart</h2> 
              <ul id="cart-items"></ul> 
              <p>Total: $<span id="total">0</span></p> 
              <button onclick="checksout()">Checkout</button> 
