--- a/index.html
+++ b/index.html
@@ -37,39 +37,39 @@
         <h1>Shopping Cart</h1>
         <div class="products">
             <div class="product">
-                <h2>smart watch</h2>
-                <img src="smartwatch.png" width="200px" height="200px">
-                <p>Price: $4000</p>
-                <p>prefect watch</p>
-                <button class="add-to-cart" onclick="addToCart('smart watch',4000)">Add to cart</button>
-            </div>
-            <div class="product">
-                <h2>saree</h2>
-                <img src="saree.png"  width="200px" height="200px">
-                <p>Price: $3000</p>
-                <p>saree with an affordable price</p>
-                <button class="add-to-cart" onclick="addToCart('saree', 3000)">Add to Cart</button>
+                <h2>SAREE</h2>
+                <img src="saree.png" width="200px" height="200px">
+                <p>Price: $2000</p>
+                <p>prefect saree</p>
+                <button class="add-to-cart" onclick="addToCart('saree',2000)">Add to cart</button>
             </div>
             <div class="product">
                 <h2>SHOE</h2>
-                <img src="shoe.png" width="200px" height="200px">  
-                <p>Price: $1000</p>
-                <p>SPORT SHOE </p>
-                <button class="add-to-cart" onclick="addToCart('shoe', 1000)">Add to Cart</button>
+                <img src="shoes.png"  width="200px" height="200px">
+                <p>Price: $4000</p>
+                <p>shoes with an affordable price</p>
+                <button class="add-to-cart" onclick="addToCart('shoes', 4000)">Add to Cart</button>
             </div>
             <div class="product">
                 <h2>LEHENGA</h2>
-                <img src="lehenga.png" width="200px" height="200px">
-                <p>Price: $900</p>
-                <p>Festival wear dress</p>
-                <button class="add-to-cart" onclick="addToCart('LEHENGA', 900)">Add to Cart</button>
+                <img src="lehenga.png" width="200px" height="200px">  
+                <p>Price: $5000</p>
+                <p>lehenga </p>
+                <button class="add-to-cart" onclick="addToCart('lehenga', 5000)">Add to Cart</button>
             </div>
             <div class="product">
-                <h2>hand bag</h2>
-                <img src="bag.png" width="200px" height="200px">
-                <p>Price: $900</p>
-                <p>party wear bag</p>
-                <button class="add-to-cart" onclick="addToCart('hand bag', 900)">Add to Cart</button>
+                <h2>HANDBAG</h2>
+                <img src="handbag.png" width="200px" height="200px">
+                <p>Price: $1000</p>
+                <p>handbags</p>
+                <button class="add-to-cart" onclick="addToCart('handbag', 1000)">Add to Cart</button>
+            </div>
+            <div class="product">
+                <h2>WATCH</h2>
+                <img src="watch.png" width="200px" height="200px">
+                <p>Price: $4000</p>
+                <p>watches</p>
+                <button class="add-to-cart" onclick="addToCart('watch', 4000)">Add to Cart</button>
             </div>
         
         
@@ -84,8 +84,45 @@
         <button onclick="checksout()">Checkout</button>
     </div>
 </div>
-  
- <script src="script.js"></script> 
-  
- </body> 
- </html>
+<script>
+let cartItems = [];
+
+function addToCart(product, price) {
+cartItems.push({product, price});
+updateCart();
+}
+
+function updateCart() {
+    cartItems.push({product, price});
+    updateCart();
+}
+
+function updateCart() {
+    let cartList = document.getElementById("cart-items");
+    let totalElement = document.getElementById("total");
+    let total = 0;
+
+    cartList.innerHTML = "";
+    cartItems.forEach(item => {
+        let listItem = document.createElement("li");
+        listItem.innerText = `${item.product} - $${item.price}`;
+        cartList.appendChild(listItem);
+        total += item.price;
+    });
+
+    totalElement.innerText = total;
+}
+
+
+
+
+// Add product and cart logic similar to the previous example
+
+function checksout() {
+    alert('Thank you for your purchase!');
+}
+
+</script>
+</body>
+
+</html>
