--- a/index.html
+++ b/index.html
@@ -38,35 +38,35 @@
         <div class="products">
             <div class="product">
                 <h2>SAREE</h2>
-                <img src="saree.png" width="200px" height="200px">
+                <img src="images\saree.jpeg" width="200px" height="200px">
                 <p>Price: $2000</p>
                 <p>prefect saree</p>
                 <button class="add-to-cart" onclick="addToCart('saree',2000)">Add to cart</button>
             </div>
             <div class="product">
                 <h2>SHOE</h2>
-                <img src="shoes.png"  width="200px" height="200px">
+                <img src="images\shoes.jpeg"  width="200px" height="200px">
                 <p>Price: $4000</p>
                 <p>shoes with an affordable price</p>
                 <button class="add-to-cart" onclick="addToCart('shoes', 4000)">Add to Cart</button>
             </div>
             <div class="product">
                 <h2>LEHENGA</h2>
-                <img src="lehenga.png" width="200px" height="200px">  
+                <img src="images\lehenga.jpeg" width="200px" height="200px">  
                 <p>Price: $5000</p>
                 <p>lehenga </p>
                 <button class="add-to-cart" onclick="addToCart('lehenga', 5000)">Add to Cart</button>
             </div>
             <div class="product">
                 <h2>HANDBAG</h2>
-                <img src="handbag.png" width="200px" height="200px">
+                <img src="images\handbag.jpeg" width="200px" height="200px">
                 <p>Price: $1000</p>
                 <p>handbags</p>
                 <button class="add-to-cart" onclick="addToCart('handbag', 1000)">Add to Cart</button>
             </div>
             <div class="product">
                 <h2>WATCH</h2>
-                <img src="watch.png" width="200px" height="200px">
+                <img src="images\watch.jpeg" width="200px" height="200px">
                 <p>Price: $4000</p>
                 <p>watches</p>
                 <button class="add-to-cart" onclick="addToCart('watch', 4000)">Add to Cart</button>
