--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="product">
                 <h2>LEHENGA</h2>
-                <img src="images\lehenga.jpeg" width="200px" height="200px">  
+                <img src="images\lehenga.jpg" width="200px" height="200px">  
                 <p>Price: $5000</p>
                 <p>lehenga </p>
                 <button class="add-to-cart" onclick="addToCart('lehenga', 5000)">Add to Cart</button>
