--- a/bootstrap.html
+++ b/bootstrap.html
@@ -37,7 +37,7 @@
         <div class="text-bg-info text-center">
             <h2>SAREE</h2>
             <p>Price: $2000</p>
-        <img src="saree.png"><height="50px></height>"<width="50px"></width>
+        <img src="images\saree.jpeg"><height="50px></height>"<width="50px"></width>
         <p>beautiful sareees </p>
             <button class="add-to-cart" onclick="addToCart('SAREE', 2000)">Add to Cart</button>
         </div>
@@ -45,7 +45,7 @@
         <div class="text-bg-warning text-center">
             <h2>SHOES</h2>
             <p>Price: $4000</p>
-            <img src ="shoes.png"><height="50px></height>"<width="50px"></width>
+            <img src ="images\shoes.jpeg"><height="50px></height>"<width="50px"></width>
             <p>branded shoes</p>
             <button class="add-to-cart" onclick="addToCart('SHOES', 4000)">Add to Cart</button>
         </div>
@@ -53,7 +53,7 @@
         <div class="text-bg-danger text-center">
             <h2>LEHENGA</h2>
             <p>Price: $5000</p>
-            <img src="lehenga.png"><height="50px></height>"<width="50px"></width>
+            <img src="images\lehenga.jpeg"><height="50px></height>"<width="50px"></width>
             <p>wedding lehengas</p>
             <button class="add-to-cart" onclick="addToCart('LEHENGA', 5000)">Add to Cart</button>
         </div>
@@ -61,7 +61,7 @@
         <div class="text-bg-secondary text-center">
             <h2>HANDBAG</h2>
             <p>Price: $4000</p>
-            <img src="handbag.png"><height="50px></height>"<width="50px"></width>
+            <img src="images\handbag.jpeg"><height="50px></height>"<width="50px"></width>
             <p>high class handbags for women</p>
             <button class="add-to-cart" onclick="addToCart('HANDBAG', 4000)">Add to Cart</button>
         </div>
@@ -69,7 +69,7 @@
         <div class="text-bg-primary text-center">
             <h2>WATCH</h2>
             <p>Price: $5000</p>
-            <img src="watch.png"><height="50px></height>"<width="50px"></width>
+            <img src="images\watch.jpeg"><height="50px></height>"<width="50px"></width>
             <p>watch for mens </p>
             <button class="add-to-cart" onclick="addToCart('WATCH', 5000)">Add to Cart</button>
         </div>
